--- a/index.html
+++ b/index.html
@@ -105,19 +105,22 @@
             <div class="transport-type">
                 <img src="ship.png" alt="Ship">
                 <h2>Maritime Transport</h2>
-                <p>Shipping goods across oceans with care. Rates: /ton-mile.</p>
+                <p>Shipping goods across oceans with care. Rates: $/ton-mile.</p>
             </div>
             <div class="transport-type">
                 <img src="plane.png" alt="Plane">
                 <h2>Air Transport</h2>
-                <p>Fast and secure air cargo services. Rates: /1000lbs.</p>
+                <p>Fast and secure air cargo services. Rates: $/1000lbs.</p>
             </div>
         </div>
         <form>
             <h3>Contact Us</h3>
-            <input type="text" placeholder="Name">
-            <input type="email" placeholder="Email">
-            <textarea placeholder="Message"></textarea>
+            <label for="name">Name:</label>
+            <input type="text" id="name" placeholder="Name">
+            <label for="email">Email:</label>
+            <input type="email" id="email" placeholder="Email">
+            <label for="message">Message:</label>
+            <textarea id="message" placeholder="Message"></textarea>
             <button type="submit">Send Message</button>
         </form>
     </div>
